--- a/index.html
+++ b/index.html
@@ -13,44 +13,28 @@
     <div class="container">
         <header>
             <img src="images/logo.png" alt="Diploma">
-            <h1>Calculadora de médias</h1>
+            <h1>Agenda telefônica</h1>
         </header>
         <main>
             <form id="form-atividade">
-                <input type="text" required placeholder="Nome da atividade" id="nome-atividade">
-                <input type="number" required placeholder="Nota da atividade" min="0" max="10" id="nota-atividade">
+                <input type="text" required placeholder="contato" id="nome-contato">
+                <input type="number" required placeholder="Número" id="número-contato">
                 <button type="submit">Adicionar +</button>
             </form>
             <table cellspacing="0">
                 <thead>
                     <tr>
                         <th>
-                            Nome da atividade
+                            Nome do contato
                         </th>
                         <th>
-                            Nota da atividade
-                        </th>
-                        <th>
-                            Aprovado?
+                            Número de telefone
                         </th>
                     </tr>
                 </thead>
                 <tbody>
                     
                 </tbody>
-                <tfoot>
-                    <tr>
-                        <td >
-                            Média final
-                        </td>
-                        <td id="media-final-valor">
-                            ---
-                        </td>
-                        <td id="media-final-resultado">
-                            <span class="resultado">---</span>
-                        </td>
-                    </tr>
-                </tfoot>
             </table>
         </main>
     </div>
